--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 #################
 
 *.pydevproject
-.project
+# .project
 .metadata
 bin/
 tmp/
@@ -12,7 +12,7 @@ tmp/
 *.swp
 *~.nib
 local.properties
-.classpath
+# .classpath
 .settings/
 .loadpath
 
@@ -23,10 +23,13 @@ local.properties
 *.launch
 
 # CDT-specific
-.cproject
+# .cproject
 
 # PDT-specific
 .buildpath
+
+# android auto file
+gen/
 
 
 #################
@@ -44,7 +47,9 @@ local.properties
 # Build results
 
 [Dd]ebug/
+[Dd]ebug.win[36][24]/
 [Rr]elease/
+[Rr]elease.win[36][24]/
 x64/
 build/
 [Bb]in/
